Actions
Bug #10802
closedxenbus: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/sysmacros.h:37, from ../../common/xen/io/xenbus_dev.c:60: ../../common/xen/io/xenbus_dev.c: In function 'xenbusdrv_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/xen/io/xenbus_dev.c:289:18: note: in expansion of macro 'NULL' DDI_PSEUDO, NULL); ^~~~ In file included from ../../common/xen/io/xenbus_dev.c:72:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 73ef9f27279e31544655b04979f4f648d8575476
commit 73ef9f27279e31544655b04979f4f648d8575476 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-22T05:15:57.000Z 10802 xenbus: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions